@@ -33,10 +33,11 @@ import os
 import sys
 from webkitpy.common.system import executive
 
-top_level_directory = os.path.normpath(os.path.join(os.path.dirname(__file__), '..', '..'))
-sys.path.insert(0, os.path.join(top_level_directory, 'Tools', 'flatpak'))
-import flatpakutils
-flatpakutils.run_in_sandbox_if_available(sys.argv)
+if sys.platform.startswith('linux'):
+    top_level_directory = os.path.normpath(os.path.join(os.path.dirname(__file__), '..', '..'))
+    sys.path.insert(0, os.path.join(top_level_directory, 'Tools', 'flatpak'))
+    import flatpakutils
+    flatpakutils.run_in_sandbox_if_available(sys.argv)
 
 def main(argv):
     """Runs WebCore bindings code generators on test IDL files and compares
