@@ -33,6 +33,8 @@ import sys
 import tempfile
 import re
 
+from gi.repository import Gio, GLib
+
 from webkitpy.common.system.systemhost import SystemHost
 from webkitpy.port.factory import PortFactory
 from webkitpy.common.system.logutils import configure_logging
@@ -673,22 +675,19 @@ class WebkitFlatpak:
                 "--talk-name=org.freedesktop.Flatpak"
             ])
 
-            xdg_runtime_dir = os.environ.get('XDG_RUNTIME_DIR', None)
-            if not xdg_runtime_dir:
-                _log.debug('XDG_RUNTIME_DIR not set. Trying default location.')
-                try:
-                    with open(os.devnull, 'w') as devnull:
-                        uid = subprocess.check_output(("id", "-u"), stderr=devnull).decode().strip()
-                        xdg_runtime_dir = '/run/user/{uid}'.format(uid=uid)
-                except subprocess.CalledProcessError:
-                    _log.debug("Could not determine XDG_RUNIME_DIR. This may cause bubblewrap to fail.")
+            bus = Gio.bus_get_sync(Gio.BusType.SESSION, None)
+            proxy = Gio.DBusProxy.new_sync(bus, Gio.DBusProxyFlags.NONE, None,
+                                           'org.freedesktop.portal.Documents',
+                                           '/org/freedesktop/portal/documents',
+                                           'org.freedesktop.portal.Documents', None)
+            document_portal_mount_point = proxy.call_sync('GetMountPoint', None, Gio.DBusCallFlags.NONE,
+                                                          GLib.MAXINT, None)
+            uid_doc_path = ''.join([chr(x) for x in document_portal_mount_point.unpack()[0][:-1]])
 
-            if xdg_runtime_dir:
-                uid_doc_path = os.path.join(xdg_runtime_dir, 'doc')
-                if os.path.exists(uid_doc_path):
-                    flatpak_command.append("--bind-mount={uid_doc_path}={uid_doc_path}".format(uid_doc_path=uid_doc_path))
-                else:
-                    _log.debug("Can't find user document path at '{uid_doc_path}'. Not mounting it.".format(uid_doc_path=uid_doc_path))
+            if os.path.exists(uid_doc_path):
+                flatpak_command.append("--bind-mount={uid_doc_path}={uid_doc_path}".format(uid_doc_path=uid_doc_path))
+            else:
+                _log.debug("Can't find user document path at '{uid_doc_path}'. Not mounting it.".format(uid_doc_path=uid_doc_path))
 
             forwarded.update({
                 "TZ": "PST8PDT",
